--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+@import url(./min.css);
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+font-family: myFirstFont;
+background-image: url('./images/futuristic-casino-architecture-mobile.png');
+background-position: top;
+background-repeat: no-repeat; 
+display: block;
+backdrop-filter: blur(10px);
+box-shadow: inset 0px -100px 50px -80px #920a4c,inset 0px 100px 50px -80px #920a4c, inset 0px 100px 10px -95px #fff, inset 0px -100px 10px -95px #fff;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: myFirstFont;
+  src: url(./fonts/IntroDemoBlackCaps.otf);
 }
