--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -16,7 +16,7 @@
     background-color: rgba(255, 254, 254, 0.2);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px); 
-    color: #fff;
+    color: #ffff;
     text-align: center;
     z-index: 2;
 }
