--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,6 +8,7 @@
 .header::before{
     content: "";
     background-image: url("../../images/coins-top.png");
+    overflow: hidden;
     width: 600px;
     height: 400px;
     position: absolute;
