--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -12,8 +12,19 @@
     width: 100vw;
     height: 400px;
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     top: 0px;
+}
+
+.header::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(8px);
+    z-index: -4;
 }
 
 .logo{
@@ -22,5 +33,4 @@
     margin-left: auto;
     margin-right: auto;
     z-index: 2;
-
 }
