--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,7 +1,8 @@
  .main-container{ 
+    display: flex;
+    flex-direction: column;
     position: relative;
     z-index: 2;
-    display: flex;
     align-items: center;
     justify-content: center;
 
@@ -18,6 +19,8 @@
     color: #ffff;
     text-align: center;
     z-index: 2;
+
+    margin-bottom: 20px;
 }
   
 
