--- a/src/Components/Spinwheel/Spinwheel.css
+++ b/src/Components/Spinwheel/Spinwheel.css
@@ -7,12 +7,11 @@
 .mainbox::after{
     content: "";
     position: absolute;
-
-    width: 100%;
-    height: 35px;
+    width: 50%;
+    height: 100%;
     background: url(../../images/Group.svg) no-repeat;
-    background-size: 10%;
-    left: 46%;
+    background-size: 15%;
+    left: 47%;
     top: -5px;
 }
 
