--- a/src/Components/Spinwheel/Spinwheel.css
+++ b/src/Components/Spinwheel/Spinwheel.css
@@ -23,7 +23,7 @@
     border-radius: 50%;
     overflow: hidden;
     transition: all ease-in-out 5s;
-    /* transform: rotate(90deg); */
+    
 }
 
 .mainbox::before {
@@ -53,41 +53,49 @@
 
 }
 
-span {
-    width: 100%;
+
+/* Сегмент 1 */
+.span1 {    width: 100%;
     height: 100%;
     display: inline-block;
     position: absolute;
-}
-
-
-/* Сегмент 1 */
-.span1 {
     clip-path: polygon(0 17%, 0 50%, 50% 50%);
     background: radial-gradient(circle, rgba(38,139,205,1) 20%, rgba(34,125,199,1) 45%, rgba(24,89,184,1) 60%, rgba(8,30,160,1) 79%, rgba(0,0,147,1) 88%, rgba(1,6,149,1) 90%, rgba(3,23,154,1) 93%, rgba(6,51,162,1) 95%, rgba(10,89,173,1) 98%, rgba(13,114,180,1) 100%);
 }
 
 /* Сегмент 2 */
-.span2 {
+.span2 {    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
     clip-path: polygon(0 17%, 30% 0, 50% 50%);
     background: radial-gradient(circle, rgba(255,0,102,1) 20%, rgba(255,13,100,1) 62%, rgba(255,21,99,1) 76%, rgba(255,0,102,1) 84%, rgba(255,0,111,1) 93%, rgba(255,0,120,1) 97%, rgba(255,0,122,1) 100%);
 }
 
 /* Сегмент 3 */
-.span3 {
+.span3 {    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
     clip-path: polygon(30% 0, 71% 0%, 50% 50%);
     background: radial-gradient(circle, rgba(38,139,205,1) 20%, rgba(34,125,199,1) 45%, rgba(24,89,184,1) 60%, rgba(8,30,160,1) 79%, rgba(0,0,147,1) 88%, rgba(1,6,149,1) 90%, rgba(3,23,154,1) 93%, rgba(6,51,162,1) 95%, rgba(10,89,173,1) 98%, rgba(13,114,180,1) 100%);
 }
 
 
 /* Сегмент 4 */
-.span4 {
+.span4 {    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
     clip-path: polygon(71% 0, 100% 18%, 50% 50%);
     background: radial-gradient(circle, rgba(255,0,102,1) 20%, rgba(255,13,100,1) 62%, rgba(255,21,99,1) 76%, rgba(255,0,102,1) 84%, rgba(255,0,111,1) 93%, rgba(255,0,120,1) 97%, rgba(255,0,122,1) 100%);
 }
 
 /* Сегмент 5 */
-.span5 {
+.span5 {    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
     clip-path: polygon(100% 18%, 100% 50%, 50% 50%);
     background: radial-gradient(circle, rgba(38,139,205,1) 20%, rgba(34,125,199,1) 45%, rgba(24,89,184,1) 60%, rgba(8,30,160,1) 79%, rgba(0,0,147,1) 88%, rgba(1,6,149,1) 90%, rgba(3,23,154,1) 93%, rgba(6,51,162,1) 95%, rgba(10,89,173,1) 98%, rgba(13,114,180,1) 100%);
 }
