--- a/src/Components/Spinwheel/Spinwheel.css
+++ b/src/Components/Spinwheel/Spinwheel.css
@@ -250,7 +250,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%;    
+    backdrop-filter: blur(20px);
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -259,12 +260,14 @@
   }
   
   .modal-content {
+    
     background: #1a1a1a;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
     color: #fff;
     width: 300px;
+    z-index: 10;
   }
   
   .modal-content h2 {
